--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-calendar></app-calendar>
+  <app-header></app-header>
+  <app-calendar [data]="data"></app-calendar>
 </div>
-
