--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+* { box-sizing: border-box; }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(100, 162, 255);}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+ul {
+    list-style: none;
+    padding: 0;
+    
+    li {
+        margin: 0;
+        padding: 0;
+    }
+}
