--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav>
-  <ul>
-    <li>
-      <h1>Календарне планування</h1>
+  <ul class="nav-list">
+    <li class="nav-list__item">
+      <h1 class="title">Календарне планування</h1>
     </li>
-    <li><button mat-raised-button color="primary" (click)="openDialog()">Додати дату</button></li>
+    <li class="nav-list__item"><button mat-raised-button color="primary" (click)="openDialog()">Додати дату</button></li>
   </ul>
 </nav>
