--- a/src/app/components/dialogs/submit/submit.component.html
+++ b/src/app/components/dialogs/submit/submit.component.html
@@ -20,7 +20,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Кінцвета дата</mat-label>
-        <input matInput [matDatepicker]="end" formControlName="endControl">
+        <input matInput [matDatepicker]="end" [min]="group.value.startControl" formControlName="endControl">
         <mat-datepicker-toggle matIconSuffix [for]="end"></mat-datepicker-toggle>
         <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
