--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ nav {
   border-bottom: 1px solid black;
 }
 
-ul {
+.nav-list {
   margin: 0;
   display: flex;
   justify-content: space-between;
@@ -13,6 +13,6 @@ ul {
   padding: 0;
 }
 
-h1 {
+.title {
   margin: 0;
 }
