provided interfaces, form validation via ts, minor name fixes

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -4,7 +4,7 @@
       <li class="control-prev">
         <button mat-raised-button color="primary" (click)="prevMonth()"><</button>
       </li>
-      <li class="control-month">{{ dateService.date | async | DateFormat | titlecase }}</li>
+      <li class="control-month">{{ dateService.date | async | dateFormat | titlecase }}</li>
       <li class="control-next">
         <button mat-raised-button color="primary" (click)="nextMonth()">></button>
       </li>
