--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -75,8 +75,8 @@
 
 .details-container {
   padding: 5px 10px;
-  
-  mat-card {
+
+  .details-card {
     background-color: #3f51b5;
     color: white;
     margin-top: 25px;
