--- a/src/app/components/dialogs/submit/submit.component.html
+++ b/src/app/components/dialogs/submit/submit.component.html
@@ -3,7 +3,7 @@
   <h3>Підтвердіть дані:</h3>
 
   <form [formGroup]="group">
-    <mat-form-field appearance="fill" class="select-container">
+    <mat-form-field appearance="fill" class="form-field select-field">
       <mat-label>Оберіть тип: </mat-label>
       <mat-select formControlName="typeControl">
         <mat-option value="medical">Лікарняний</mat-option>
@@ -12,29 +12,29 @@
     </mat-form-field>
 
     <div class="datapicker-container">
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="form-field datapicker-field">
         <mat-label>Стартова дата</mat-label>
         <input matInput [matDatepicker]="start" formControlName="startControl">
         <mat-datepicker-toggle matIconSuffix [for]="start"></mat-datepicker-toggle>
         <mat-datepicker #start></mat-datepicker>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="form-field datapicker-field">
         <mat-label>Кінцвета дата</mat-label>
-        <input matInput [matDatepicker]="end" [min]="group.value.startControl" formControlName="endControl">
+        <input matInput [matDatepicker]="end" formControlName="endControl">
         <mat-datepicker-toggle matIconSuffix [for]="end"></mat-datepicker-toggle>
         <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
     </div>
 
-    <mat-form-field class="textfield-container">
+    <mat-form-field class="form-field textfield-container">
       <mat-label>Додатковий коментар</mat-label>
       <textarea matInput placeholder="Місце для тексту" formControlName="commentControl"></textarea>
     </mat-form-field>
   </form>
 
   <div class="button-container">
-    <button mat-raised-button color="warn" (click)="close()">Закрити</button>
-    <button mat-raised-button color="primary" (click)="submit()">Надіслати запит</button>
+    <button mat-raised-button color="warn" (click)="close()" class="modal-control">Закрити</button>
+    <button mat-raised-button color="primary" (click)="submit()" class="modal-control">Надіслати запит</button>
   </div>
 
   <button class="close-button"><span class="material-icons" (click)="close()">close</span></button>
