--- a/src/app/components/dialogs/submit/submit.component.scss
+++ b/src/app/components/dialogs/submit/submit.component.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-direction: column;
 
-  mat-form-field {
+  .form-field {
     align-items: center;
     width: 100%;
     max-height: 150px;
@@ -16,7 +16,7 @@
 .datapicker-container {
   display: flex;
 
-  mat-form-field {
+  .datapicker-field {
     width: 40%;
 
     &:not(:last-child) {
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: end;
 
-  button {
+  .modal-control {
     margin-left: 10px;
   }
 }
