--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navigation">
   <ul class="nav-list">
     <li class="nav-list__item">
       <h1 class="title">Календарне планування</h1>
