ngrx storage init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <app-header></app-header>
-  <app-calendar [data]="data"></app-calendar>
+
+  <app-calendar></app-calendar>
 </div>
