--- a/src/app/components/dialogs/submit/creation.component.html
+++ b/src/app/components/dialogs/submit/creation.component.html
@@ -6,8 +6,8 @@
     <mat-form-field appearance="fill" class="form-field select-field">
       <mat-label>Оберіть тип: </mat-label>
       <mat-select formControlName="typeControl">
-        <mat-option value="medical">Лікарняний</mat-option>
-        <mat-option value="vacation">Відпочинок</mat-option>
+        <mat-option value="Лікарняний">Лікарняний</mat-option>
+        <mat-option value="Відпустка">Відпустка</mat-option>
       </mat-select>
     </mat-form-field>
 
