--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -64,6 +64,7 @@
         border-radius: 10px;
         background: #3f51b5;
       }
+
     }
 
     &:hover {
@@ -81,6 +82,10 @@
     color: white;
     margin-top: 25px;
     padding: 20px;
+  }
+  
+  .abcence-list__delete {
+    margin-top: 20px;
   }
 }
 .loading-spinner {
