--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,6 +11,14 @@
   height: 100px;
   list-style-type: none;
   padding: 0;
+
+  .nav-button__container {
+    display: flex;
+
+    .edit-button {
+      margin-right: 20px;
+    }
+  }
 }
 
 .title {
