--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -46,8 +46,9 @@
             <li class="abcence-list__item">Кінець: {{ item.end | dateFormat: "D MMMM YYYY р."}}</li>
             <li class="abcence-list__item">Причина: {{ item.type }}</li>
             <li class="abcence-list__item">Коментар: {{ item.comment }}</li>
-            <li class="abcence-list__delete">
-              <button mat-raised-button color="warn" (click)="deleteAbcence(item)">Видалити запис</button>
+            <li class="abcence-list__buttons">
+              <button class="edit-button" mat-raised-button color="accent" (click)="openEditorDialog(item)">Редагувати дату</button>
+              <button class="delete-button" mat-raised-button color="warn" (click)="deleteAbcence(item)">Видалити запис</button>
             </li>
           </ul>
         </mat-card>
