--- a/src/app/components/dialogs/creation/creation.component.html
+++ b/src/app/components/dialogs/creation/creation.component.html
@@ -19,8 +19,8 @@
         <mat-datepicker #start></mat-datepicker>
       </mat-form-field>
       <mat-form-field appearance="fill" class="form-field datapicker-field">
-        <mat-label>Кінцвета дата</mat-label>
-        <input matInput [matDatepicker]="end" formControlName="endControl">
+        <mat-label>Кінцева дата</mat-label>
+        <input matInput [matDatepicker]="end" [min]="group.value.startControl" formControlName="endControl">
         <mat-datepicker-toggle matIconSuffix [for]="end"></mat-datepicker-toggle>
         <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
