--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -25,8 +25,8 @@
           <td *ngFor="let day of week.days" class="table-body__cell"
             [ngClass]="{'disabled': day.disabled, 'today': day.current}" (click)="getDateDetails(day)">
             <span>{{ day.value.format("DD")}}</span>
-            <ul class="abcense-list" *ngIf="day.abcence.length">
-              <li *ngFor="let item of day.abcence" class="abcense-list__item">Тип: {{ item.type }}</li>
+            <ul class="abcense-list" *ngIf="day.absence.length">
+              <li *ngFor="let item of day.absence" class="abcense-list__item">Тип: {{ item.type }}</li>
             </ul>
           </td>
         </tr>
@@ -41,19 +41,19 @@
       </li>
       <ul>
         <li>Дата: {{ current.value.format("LL") }}</li>
-        <mat-card *ngFor="let item of current.abcence" class="details-card">
-          <ul class="abcence-list">
-            <li class="abcence-list__item">Кінець: {{ item.end | dateFormat: "D MMMM YYYY р."}}</li>
-            <li class="abcence-list__item">Причина: {{ item.type }}</li>
-            <li class="abcence-list__item">Коментар: {{ item.comment }}</li>
-            <li class="abcence-list__buttons">
+        <mat-card *ngFor="let item of current.absence" class="details-card">
+          <ul class="absence-list">
+            <li class="absence-list__item">Кінець: {{ item.end | dateFormat: "D MMMM YYYY р."}}</li>
+            <li class="absence-list__item">Причина: {{ item.type }}</li>
+            <li class="absence-list__item">Коментар: {{ item.comment }}</li>
+            <li class="absence-list__buttons">
               <button class="edit-button" mat-raised-button color="accent" (click)="openEditorDialog(item)">Редагувати дату</button>
-              <button class="delete-button" mat-raised-button color="warn" (click)="deleteAbcence(item.id)">Видалити запис</button>
+              <button class="delete-button" mat-raised-button color="warn" (click)="deleteAbsence(item.id)">Видалити запис</button>
             </li>
           </ul>
         </mat-card>
 
-        <li *ngIf="!current.abcence.length">
+        <li *ngIf="!current.absence.length">
           <mat-card class="details-card">
             На эту дану немає запланованих відпусток
           </mat-card>
