--- a/apps/frontend/src/app/components/calendar/calendar.component.scss
+++ b/apps/frontend/src/app/components/calendar/calendar.component.scss
@@ -1,12 +1,13 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   margin: 0 auto;
 }
 
 .calendar-body {
   width: 100%;
   justify-content: center;
+  position: relative;
 }
 
 .calendar-control {
@@ -18,7 +19,11 @@
   margin: 25px 0;
   padding-left: 25px;
 }
-
+.button-update {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
 .calendar-table {
   border-collapse: collapse;
 
@@ -99,4 +104,11 @@
   padding: 20px;
   width: 1051px;
   margin-bottom: 10px;
+}
+.disabled-container {
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.377);
 }
