registration error handling

--- a/apps/frontend/src/app/components/dialogs/register/register.component.html
+++ b/apps/frontend/src/app/components/dialogs/register/register.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <h3>Регестрація:</h3>
+    
+    <p>{{ error$ | async }}</p>
+    
     <form [formGroup]="group" class="login-form">
 
       <mat-form-field appearance="fill">
