--- a/apps/frontend/src/app/components/dialogs/login/login.component.html
+++ b/apps/frontend/src/app/components/dialogs/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <h3>Вхід:</h3>
-  
-    <p> {{ error$ | async }} </p>
+    <p> {{error}} </p>
     <form [formGroup]="group" class="login-form">
       <mat-form-field appearance="fill">
         <mat-label>Логін</mat-label>
