--- a/apps/frontend/src/app/components/header/header.component.html
+++ b/apps/frontend/src/app/components/header/header.component.html
@@ -4,10 +4,10 @@
       <h1 class="title">Календарне планування</h1>
     </li>
     <div class="button-container">
-      <button class="button-login" mat-raised-button color="accent" (click)="openLoginDialog()" *ngIf="!user">Вхід</button>
-      <button class="button-register" mat-raised-button color="accent" (click)="openRegistrationDialog()" *ngIf="!user">Регестрація</button>
-      <button class="button-logout" mat-raised-button color="warn" (click)="openLogoutDialog()" *ngIf="user">Вийти</button>
-      <button class="button-create" mat-raised-button color="primary" (click)="openCreationDialog()" *ngIf="user">Додати дату</button>
+      <button class="button-login" mat-raised-button color="accent" (click)="openLoginDialog()" *ngIf="!sessionStorage.getItem('token')">Вхід</button>
+      <button class="button-register" mat-raised-button color="accent" (click)="openRegistrationDialog()" *ngIf="!sessionStorage.getItem('token')">Регестрація</button>
+      <button class="button-logout" mat-raised-button color="warn" (click)="logout()" *ngIf="sessionStorage.getItem('token')">Вийти</button>
+      <button class="button-create" mat-raised-button color="primary" (click)="openCreationDialog()" *ngIf="sessionStorage.getItem('token')">Додати дату</button>
     </div>
   </ul>
 </nav>
