--- a/apps/frontend/src/app/components/dialogs/register/register.component.html
+++ b/apps/frontend/src/app/components/dialogs/register/register.component.html
@@ -1,10 +1,8 @@
 <div class="container">
     <h3>Регестрація:</h3>
-    
-    <p>{{ error$ | async }}</p>
-    
-    <form [formGroup]="group" class="login-form">
+    <p> {{error}} </p>
 
+    <form [formGroup]="group" class="login-form">
       <mat-form-field appearance="fill">
         <mat-label>Логін</mat-label>
         <input matInput formControlName="username">
