--- a/apps/frontend/src/app/components/header/header.component.scss
+++ b/apps/frontend/src/app/components/header/header.component.scss
@@ -31,7 +31,10 @@
 .button-create {
   grid-area: create;
 }
-
+.button-logout {
+  grid-column-start: login;
+  grid-column-end: register;
+}
 .title {
   margin: 0;
 }
