--- a/apps/frontend/src/app/components/dialogs/login/login.component.html
+++ b/apps/frontend/src/app/components/dialogs/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngClass]="{ 'loading': loading }">
     <h3>Вхід:</h3>
     <p> {{error}} </p>
     <form [formGroup]="group" class="login-form">
