--- a/apps/frontend/src/app/components/dialogs/register/register.component.html
+++ b/apps/frontend/src/app/components/dialogs/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngClass]="{ 'loading': loading }">
     <h3>Регестрація:</h3>
     <p> {{error}} </p>
 
