separated login/registration pages via routing

--- a/apps/frontend/src/app/components/dialogs/creation/creation.component.html
+++ b/apps/frontend/src/app/components/dialogs/creation/creation.component.html
@@ -13,63 +13,30 @@
     <div class="datapicker-container">
       <mat-form-field appearance="fill" class="form-field datapicker-field">
         <mat-label>Стартова дата</mat-label>
-        <input
-          matInput
-          [matDatepicker]="start"
-          formControlName="startControl"
-        />
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="start"
-        ></mat-datepicker-toggle>
+        <input matInput [matDatepicker]="start" formControlName="startControl" />
+        <mat-datepicker-toggle matIconSuffix [for]="start"></mat-datepicker-toggle>
         <mat-datepicker #start></mat-datepicker>
       </mat-form-field>
       <mat-form-field appearance="fill" class="form-field datapicker-field">
         <mat-label>Кінцева дата</mat-label>
-        <input
-          matInput
-          [matDatepicker]="end"
-          [min]="group.value.startControl"
-          formControlName="endControl"
-        />
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="end"
-        ></mat-datepicker-toggle>
+        <input matInput [matDatepicker]="end" [min]="group.value.startControl" formControlName="endControl" />
+        <mat-datepicker-toggle matIconSuffix [for]="end"></mat-datepicker-toggle>
         <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
     </div>
 
     <mat-form-field class="form-field textfield-container">
       <mat-label>Додатковий коментар</mat-label>
-      <textarea
-        matInput
-        placeholder="Місце для тексту"
-        formControlName="commentControl"
-      ></textarea>
+      <textarea matInput placeholder="Місце для тексту" formControlName="commentControl"></textarea>
     </mat-form-field>
   </form>
 
   <div class="button-container">
-    <button
-      mat-raised-button
-      color="warn"
-      (click)="close()"
-      class="modal-control"
-    >
+    <button mat-raised-button color="warn" (click)="close()" class="modal-control">
       Закрити
     </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="submit()"
-      class="modal-control"
-    >
+    <button mat-raised-button color="primary" (click)="submit()" class="modal-control">
       Надіслати запит
     </button>
   </div>
-
-  <button class="close-button">
-    <span class="material-icons" (click)="close()">close</span>
-  </button>
 </div>
